trying to fix height for chat so that it covers as much of the visible page as possible

--- a/feed/chat/css/simple-sidebar.css
+++ b/feed/chat/css/simple-sidebar.css
@@ -159,7 +159,8 @@
 }
 
 .chat-panel .panel-body {
-    height: 350px;
+    height:70vh;
+    display:block;
     overflow-y: scroll;
 }
 .contenedor{
